// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkSelect should render correctly 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
  testID={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with "showImage" and image 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
  testID={undefined}
>
  <Image
    style={
      Array [
        undefined,
        Object {
          "backgroundColor": "rgb(243, 242, 245)",
          "height": 12,
          "marginEnd": 8,
          "width": 16,
        },
      ]
    }
  />
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with "showImage" and no image 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
  testID={undefined}
>
  <View
    style={
      Object {
        "backgroundColor": "rgb(243, 242, 245)",
        "height": 12,
        "marginEnd": 8,
        "width": 16,
      }
    }
  />
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with "valid" false 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(255, 84, 82)",
      },
    ]
  }
  testID={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(255, 84, 82)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with "valid" false and a validation message 1`] = `
<View>
  <View
    accessibilityComponentType="button"
    accessibilityLabel={undefined}
    accessibilityTraits={
      Array [
        "button",
      ]
    }
    accessible={true}
    hasTVPreferredFocus={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "borderColor": "rgb(230, 228, 235)",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingVertical": 4,
        },
        Object {
          "borderColor": "rgb(255, 84, 82)",
        },
      ]
    }
    testID={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "marginStart": 4,
            },
            Object {
              "color": "rgb(255, 84, 82)",
            },
          ],
        ]
      }
    >
      
    </Text>
    <Text
      accessible={true}
      allowFontScaling={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Object {
            "marginStart": 4,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "fontWeight": "400",
          "letterSpacing": 0,
        },
        Object {},
        Object {
          "color": "rgb(255, 84, 82)",
          "paddingTop": 4,
        },
      ]
    }
  >
    Nope
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with "valid" true 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
      Object {
        "borderColor": "rgb(0, 215, 117)",
      },
    ]
  }
  testID={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(0, 215, 117)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with a text label 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
  testID={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with an element label 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
  testID={undefined}
>
  <View />
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with custom styles 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
  testID={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          false,
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`Android BpkSelect should render correctly with the disabled prop 1`] = `
<View
  accessibilityComponentType="button"
  accessibilityLabel={undefined}
  accessibilityTraits={
    Array [
      "button",
      "disabled",
    ]
  }
  accessible={true}
  hasTVPreferredFocus={undefined}
  hitSlop={undefined}
  isTVSelectable={true}
  nativeBackgroundAndroid={
    Object {
      "attribute": "selectableItemBackground",
      "type": "ThemeAttrAndroid",
    }
  }
  onLayout={undefined}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "borderColor": "rgb(230, 228, 235)",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingVertical": 4,
      },
    ]
  }
  testID={undefined}
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
        },
        Object {},
        Array [
          Object {
            "marginEnd": "auto",
          },
          Object {
            "color": "rgb(230, 228, 235)",
          },
        ],
      ]
    }
  >
    label
  </Text>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Object {
          "marginStart": 4,
        },
      ]
    }
  >
    
  </Text>
</View>
`;
